k8s/quote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: quote
          image: mrdocker007/quote
          ports:
            - containerPort: 9802
