k8s/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-demo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 9802
      targetPort: 9802
