k8s/quote-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 9802
      targetPort: 9802
